syntax = "proto3";

option csharp_namespace = "GrpcChatServer";

package chat;

// The chat service definition
service Chat {
	// Sends message
	rpc SendMessage (stream ChatMessageRequest) returns (stream ChatMessageServerResponse);

	// LogIn users
	rpc LogIn (LoginRequest) returns (LoginResponse);

	// LogOut
	rpc LogOut (LogoutRequest) returns (LogoutResponse);
}

// Chat message request
message ChatMessageRequest {
	string user = 1;
	string message = 2;
}

// Chat message response from server
message ChatMessageServerResponse {
	ChatMessageRequest message = 1;
}

// Login request
message LoginRequest {
	string login = 1;
}

// Logout request
message LogoutRequest {
	string login = 1;
}

// LogIn response
message LoginResponse {
	bool success = 1;
	string errorMessage = 2;
}

// LogOut response
message LogoutResponse {}